<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>taiping</artifactId>
		<groupId>com.taiping</groupId>
		<version>1.1</version>
	</parent>

	<artifactId>taiping-sol-insu-union</artifactId>
	<version>1.0</version>
	<packaging>war</packaging>
	<name>taiping-sol-insu-union</name>
	<description>太平保险-投保联合</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.target.file.name>taiping-sol-insu-union</project.build.target.file.name>
		<project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.install.phase>uat</project.install.phase>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.taiping</groupId>
			<artifactId>taiping-framework</artifactId>
			<version>1.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.taiping</groupId>
			<artifactId>taiping-common</artifactId>
			<version>1.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.taiping</groupId>
			<artifactId>javamelody</artifactId>
			<version>1.44.0</version>
		</dependency>
		<dependency>
			<groupId>com.taiping</groupId>
			<artifactId>eval</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>n22-plat</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>ehero</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>axis</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>commons-discovery</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>jaxrpc</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.taiping-legacy</groupId>
			<artifactId>saaj-impl</artifactId>
			<version>1.3</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.build.target.file.name}</finalName>
		<directory>${basedir}/target</directory>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<outputDirectory>${basedir}/target/classes</outputDirectory>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<!-- ant script -->
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>upload-war-to-uat-server</id>
						<phase>install</phase>
						<configuration>
							<tasks>
								<ant antfile="${basedir}/bin/${project.install.phase}-ant.xml">
									<target name="deploy" />
								</ant>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.taiping</groupId>
						<artifactId>commons-net</artifactId>
						<version>1.4.1</version>
					</dependency>
					<dependency>
						<groupId>com.taiping</groupId>
						<artifactId>ant-jakarta-oro</artifactId>
						<version>1.6.1</version>
					</dependency>
					<dependency>
						<groupId>com.taiping</groupId>
						<artifactId>ant-commons-net</artifactId>
						<version>1.9.1</version>
					</dependency>
					<dependency>
						<groupId>com.taiping</groupId>
						<artifactId>ant-jsch</artifactId>
						<version>1.7.1</version>
					</dependency>
					<dependency>
						<groupId>com.jcraft</groupId>
						<artifactId>jsch</artifactId>
						<version>0.1.54</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-archetype-plugin</artifactId>
				<version>2.2</version>
			</plugin>
			<!-- 编译 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<inherited>true</inherited>
				<configuration>
					<argLine>
						-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
					</argLine>
					<forkMode>always</forkMode>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.21</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<wtpmanifest>true</wtpmanifest>
					<wtpapplicationxml>true</wtpapplicationxml>
					<wtpversion>2.0</wtpversion>
				</configuration>
				<version>2.9</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<version>1.1</version>
				<configuration>
					<path>/${project.build.target.file.name}</path>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<locales>zh_CN</locales>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>default-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<!-- 自动根据JVM参数启用profile，替换不同环境的资源 -->
		<profile>
			<id>replace-resources</id>
			<activation>
				<property>
					<name>project.install.phase</name>
				</property>
			</activation>
			<build>
				<plugins>
					<!-- war打包 -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.1.1</version>
						<configuration>
							<webResources>
								<resource>
									<directory>config/${project.install.phase}</directory>
									<targetPath>WEB-INF</targetPath>
								</resource>
							</webResources>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
